last one commit

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         
                         </p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/leyoking"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/alex-toule-236aab201/"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                     <a href="#contact" class="btn">Me contacter</a>
@@ -198,8 +198,8 @@
                 <div class="footer-social">
                     <h3>Réseaux sociaux</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/leyoking"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/alex-toule-236aab201/"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
